404.md file added!

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="icon" type="image/x-icon" href="images/icons.png">
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>First Portfolio Bootstrap 5 Theme</title>
+        <title>Kanchan Portfolio</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,12 +48,15 @@ https://templatemo.com/tm-578-first-portfolio
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">First</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
+                    
+                    <img src="https://img.icons8.com/color/48/000000/mind-map.png" class="mr-3 h-6 sm:h-9" alt="Reinventing Logo">
+                </a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
                     <a class="custom-btn btn" href="#section_5">
-                        120-240-9600
+                        +91-9662558307
                     </a>
                 </div>
 
@@ -83,7 +86,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <div class="d-lg-flex align-items-center d-none ms-auto">
                         <i class="navbar-icon bi-telephone-plus me-3"></i>
                         <a class="custom-btn btn" href="#section_5">
-                            120-240-9600
+                            +91-9662558307
                         </a>
                     </div>
                 </div>
@@ -139,7 +142,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <img src="images/happy-bearded-young-man.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
-                                <h3 class="pt-2 mb-3">a little bit about Joshua</h3>
+                                <h3 class="pt-2 mb-3">A little bit about Kanchan Kumar Sharma</h3>
 
                                 <p>This one-page HTML portfolio is provided by <a href="https://templatemo.com" target="_blank">TemplateMo</a>. This layout is based on Bootstrap v5.1.3 CSS and JS libraries. Image credits go to <a href="https://unsplash.com" target="_blank">Unsplash</a> and <a href="https://freepik.com" target="_blank">FreePik</a> for images used in this page.</p>
 
