--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:hello@josh.design">kanchankumarsharma3@gmail.com</a></span>
+                                        <span ><a  href="mailto:kanchankumarsharma3@gmail.com">kanchankumarsharma3@gmail.com</a></span>
                                     </p>
                                 </div>
                             </div>
@@ -472,7 +472,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
 
                                     <p>
-                                        <a href="mailto:hello@josh.design">
+                                        <a href="mailto:kanchankumarsharma3@gmail.com">
                                            kanchankumarsharma3@gmail.com
                                         </a>
                                     </p>
