--- a/userinformation.html
+++ b/userinformation.html
@@ -3,7 +3,9 @@
 <head>  
     <title></title>  
     <!-- <script src="jquery-1.8.2.js"></script>   -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.js"></script>  
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.2/jquery.js"></script>   -->
+
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
      
  <script type="text/javascript">  
      var userip, usercountry, usercity, userregion, userlatitude, userlongitude, usertimezone  
