--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Webservices</small>
+                                    <small class="projects-tag">Webapp</small>
 
                                     <h3 class="projects-title">Connecting</h3>
                                 </div>
